Pass numberOfShards via interface method instead of params injection
Add a default method initialize(IngestionSource, int numberOfShards) to
IngestionConsumerFactory. This avoids copying the entire IngestionSource
object on every initialization just to inject _number_of_shards into
params. Existing plugins (Kafka, Kinesis, FS) are unaffected as the
default implementation delegates to the original single-arg method.

HiveConsumerFactory overrides the two-arg method and passes
numberOfShards directly to HiveSourceConfig. The single-arg method
throws UnsupportedOperationException to catch incorrect usage early.

Signed-off-by: Sotaro Hikita <bering1814@gmail.com>